2011-03-10  Paul Eggert  <eggert@cs.ucla.edu>

	* fontset.c (free_realized_fontset): Now static.

	* xrdb.c: Include "xterm.h", to check x_load_resources's interface.

	* xselect.c (x_disown_buffer_selections): Remove; not used.
	(TRACE3) [!defined TRACE_SELECTION]: Remove; not used.
	(x_own_selection, Fx_disown_selection_internal): Rename locals
	to avoid shadowing.
	(x_handle_dnd_message): Remove local to avoid shadowing.

	* lisp.h (GCPRO1_VAR, UNGCPRO_VAR): New macros,
	so that the caller can use some name other than gcpro1.
	(GCPRO1, UNGCPRO): Reimplement in terms of the new macros.
	* xfns.c (x_decode_color, x_set_name, x_window): Now static.
	(Fx_create_frame): Add braces to silence GCC warning.
	(Fx_file_dialog, Fx_select_font): Fix pointer signedness.
	(x_real_positions, xg_set_icon_from_xpm_data, x_create_tip_frame):
	Remove unused locals.
	(Fx_create_frame, x_create_tip_frame, Fx_show_tip):
	(Fx_backspace_delete_keys_p): Rename locals to avoid shadowing.
	Some of these renamings use the new GCPRO1_VAR and UNGCPRO_VAR
	macros.

2011-03-09  Paul Eggert  <eggert@cs.ucla.edu>

	* xterm.h (x_mouse_leave): New decl.

	* xterm.c (x_copy_dpy_color, x_focus_on_frame, x_unfocus_frame):
	Remove unused functions.
	(x_shift_glyphs_for_insert, XTflash, XTring_bell):
	(x_calc_absolute_position): Now static.
	(XTread_socket): Don't define label "out" unless it's used.
	Don't declare local "event" unless it's used.
	(x_iconify_frame, x_free_frame_resources): Don't declare locals
	unless they are used.
	(XEMBED_VERSION, xembed_set_info): Don't define unless needed.
	(x_fatal_error_signal): Remove; not used.
	(x_draw_image_foreground, redo_mouse_highlight, XTmouse_position):
	(x_scroll_bar_report_motion, handle_one_xevent, x_draw_bar_cursor):
	(x_error_catcher, x_connection_closed, x_error_handler):
	(x_error_quitter, xembed_send_message, x_iconify_frame):
	(my_log_handler): Rename locals to avoid shadowing.
	(x_delete_glyphs, x_ins_del_lines): Mark with NO_RETURN.